# skillreg-local

./: .gitignore  CLAUDE.md  DEV-PLAN.md  ROADMAP.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/plans/: 2026-03-10-macos-notarization.md  2026-05-20-skillreg-env-engine-spec.md
scripts/: check-release-notarization.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api_error.rs  auth.rs  auto_update.rs  collaboration.rs  config.rs  env.rs  installed_manifest.rs  local.rs  mod.rs  skills.rs  slash_commands.rs
src-tauri/tests/: tray_config.rs
src/components/: DeleteSkillDialog.tsx  EnvVarSetupDialog.tsx  ProposeDialog.tsx  PublishDialog.tsx  SkillRegLogo.tsx  UpdateChecker.tsx  ValidationBadge.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  Titlebar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx
src/lib/: api.ts  constants.ts  device-polling.ts  env-inventory.ts  installed-skill-groups.ts  local-skill-actions.ts  notifications.ts  setup-state.ts  store.ts  tag-colors.ts  types.ts
src/pages/: Catalog.tsx  Commands.tsx  Dashboard.tsx  EnvVars.tsx  Installed.tsx  Login.tsx  PublicCatalog.tsx  Settings.tsx  Setup.tsx  SkillDetail.tsx
src/styles/: globals.css
tests/: device-polling.test.ts  env-inventory.test.ts  installed-skill-groups.test.ts  release-hardening.test.ts  setup-state.test.ts
