[package]
name = "skillreg-local"
version = "0.3.1"
edition = "2021"

[lib]
name = "skillreg_local_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "skillreg-local"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dirs = "6"
open = "5"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
tar = "0.4"
flate2 = "1.0"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
